# Small_Scale_Contact

./: README.md  pyproject.toml
data/: 2024-10-24--Air_Indent_0001_DC.txt
data/Au_2024-10-24/: 2024-10-24--Gold_00000_DC.txt  2024-10-24--Gold_00001_DC.txt  2024-10-24--Gold_00002_DC.txt  2024-10-24--Gold_00003_DC.txt  2024-10-24--Gold_00004_DC.txt  2024-10-24--Gold_00005_DC.txt  2024-10-24--Gold_00007_DC.txt  2024-10-24--Gold_00008_DC.txt  2024-10-24--Gold_00009_DC.txt  2024-10-24--Gold_00010_DC.txt  2024-10-24--Gold_00011_DC.txt  2024-10-24--Gold_00012_DC.txt  2024-10-24--Gold_00015_DC.txt  2024-10-24--Gold_00016_DC.txt  2024-10-24--Gold_00017_DC.txt  2024-10-24--Gold_00019_DC.txt  2024-10-24--Gold_00020_DC.txt  2024-10-24--Gold_00021_DC.txt  2024-10-24--Gold_00022_DC.txt  2024-10-24--Gold_00024_DC.txt  2024-10-24--Gold_00025_DC.txt  2024-10-24--Gold_00026_DC.txt  2024-10-24--Gold_00027_DC.txt  2024-10-24--Gold_00028_DC.txt  2024-10-24--Gold_00029_DC.txt  2024-10-24--Gold_00031_DC.txt  2024-10-24--Gold_00032_DC.txt  2024-10-24--Gold_00033_DC.txt  2024-10-24--Gold_00034_DC.txt  2024-10-24--Gold_00035_DC.txt  2024-10-24--Gold_00036_DC.txt  2024-10-24--Gold_00037_DC.txt  2024-10-24--Gold_00041_DC.txt  2024-10-24--Gold_00042_DC.txt  2024-10-24--Gold_00043_DC.txt  2024-10-24--Gold_00046_DC.txt  2024-10-25--Gold_00049_DC.txt  2024-10-25--Gold_00051_DC.txt  2024-10-25--Gold_00052_DC.txt  (+32 more)
ref/: ref-info-code.bib  ref-info-data.bib
src/: gen_tip_surface_data-contact.py  gen_tip_surface_data_vdw.py  plot_model-vdw_only.py  plot_model_vdw_and_contact.py
(+29 files in other folders)
